<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".model.Create_sensor">

    <TextView
        android:id="@+id/texto_cadastro_sensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_de_sensor"
        android:layout_gravity="center_horizontal"
        />

    <EditText
        android:id="@+id/nome_sensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/saida_sensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/tipo_de_sa_da"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/alcance_sensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/alcance"
        android:autofillHints="" />

    <EditText
        android:id="@+id/velocidade_sensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/velocidade_de_resposta"
        android:autofillHints="" />

    <EditText
        android:id="@+id/unidade_sensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/unidade_medida"
        android:autofillHints="" />

    <EditText
        android:id="@+id/localizacao_sensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/localiza_o"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="349dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/status_sensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/status_on_off"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_sensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar_sensor" />

</LinearLayout>