<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical"
    tools:context=".model.Create_estacao">

    <TextView
        android:id="@+id/texto_cadastro_estacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_de_esta_o"
        android:layout_gravity="center_horizontal"
        />

    <EditText
        android:id="@+id/nome_estacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/descricao_estacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/descri_o"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/proprietario_estacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/propriet_rio"
        android:autofillHints="" />

    <EditText
        android:id="@+id/localizacao_estacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/localiza_o_lat_log"
        android:autofillHints="" />


    <Button
        android:id="@+id/btncad_estacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar_estacao" />
</LinearLayout>